<resources>
    <string name="plusSymbol">+</string>
    <string name="subtractSymbol">-</string>
    <string name="multiplyButton">x</string>
    <string name="oneButton">1</string>
    <string name="twoButton">2</string>
    <string name="threeButton">3</string>
    <string name="fourButton">4</string>
    <string name="fiveButton">5</string>
    <string name="sixButton">6</string>
    <string name="sevenButton">7</string>
    <string name="eightButton">8</string>
    <string name="nineButton">9</string>
    <string name="tenButton">10</string>
    <string name="divButton">/</string>
    <string name="clearButton">C</string>
    <string name="equalsButton">=</string>
    <string name="zeroText">0</string>
    <string name="negateButton">+/-</string>
    <string name="decimalButton">. </string>
    <string name="deleteSymbol">⌫</string>
    <string name="app_name">NSCC Calculator 2023!</string>
</resources>